World gen accuracy modifiers